[package]
name = "maui-server"
version = "0.0.0"
description = "Server for maui tool."
publish = false
homepage = "https://github.com/rousan/maui"
repository = "https://github.com/rousan/maui"
keywords = ["tunneling", "tcp-tunnel", "http-tunnel", "port-forwarding","cli"]
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
authors = ["Rousan Ali <hello@rousan.io>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
hyper = "0.13"
routerify = "1.1"
routerify-cors = "1.1"
routerify-json-response = "1.1"
tokio = { version = "0.2", features = ["full"] }
dotenv = "0.15.0"
colored = "1.9"
log = "0.4"
fern = "0.5"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
bytes = "0.5"
reqwest = { version = "0.10", features = ["json"] }
lazy_static = "1.4.0"
async-trait = "0.1"
url = "2.1"