[package]
name = "maui-server"
version = "0.0.0"
description = "Server for maui tool."
publish = false
homepage = "https://github.com/rousan/maui"
repository = "https://github.com/rousan/maui"
keywords = ["tunneling", "tcp-tunnel", "http-tunnel", "port-forwarding","cli"]
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
authors = ["Rousan Ali <hello@rousan.io>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
hyper = "0.13.6"
routerify = "1.1.4"
routerify-cors = "1.1.0"
routerify-json-response = "1.1.0"
routerify-websocket = { version = "1.0.0", features = ["json"] }
tokio = { version = "0.2.21", features = ["full"] }
dotenv = "0.15.0"
colored = "1.9.3"
log = "0.4.8"
fern = "0.6.0"
chrono = "0.4.11"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.55"
uuid = { version = "0.8.1", features = ["v4"] }
bytes = "0.5.4"
reqwest = { version = "0.10.6", features = ["json"] }
lazy_static = "1.4.0"
async-trait = "0.1.35"
url = "2.1.1"
